# Copyright (C) 2007 Patrick Walton <pcwalton@uchicago.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT([iphone-dev include files],
        [0.30],
        [Patrick Walton pcwalton@uchicago.edu],
        [iphone-dev include files])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])

AC_CONFIG_FILES([
    Makefile
    README
    doc/Makefile
    m4/Makefile
    src/Makefile
    src/arm/Makefile
    src/machine/Makefile
    src/sys/Makefile
])

AC_OUTPUT
