# Copyright (C) 2007 Patrick Walton <pcwalton@uchicago.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include_HEADERS=_types.h errno.h pthread.h pthread_impl.h signal.h stdlib.h \
    string.h time.h

